iPad alignment fixing

--- a/src/styles/LandingPage/LandingPage.css
+++ b/src/styles/LandingPage/LandingPage.css
@@ -149,9 +149,6 @@ only screen and (min-device-width: 1024px) and (max-device-width: 1124px) and (o
     white-space: nowrap;
     text-wrap: nowrap;
   }
-  .iPadViewHeight{
-    height: 85vh;
-  }
   .iPadWdth{
     width: 100%;
   }
@@ -181,9 +178,6 @@ only screen and (-webkit-min-device-pixel-ratio: 2) and (min-device-width: 1024p
   .iPadHeadingBreaking{
     white-space: nowrap;
     text-wrap: nowrap;
-  }
-  .iPadViewHeight{
-    height: 85vh;
   }
   .iPadWdth{
     width: 100%;
